fix resources controls visibility

--- a/resourcemanager/modules/ResourceManagerLauncher/style.css
+++ b/resourcemanager/modules/ResourceManagerLauncher/style.css
@@ -34,13 +34,7 @@ body {
 	background: var(--secondary-fg-color);
 	color: var(--primary-bg-color);
 }
-*/
 
-.resourcesControls {
-	display: none;
-}
-
-/*
 .mainContainer {
 	width: 100%;
 	background: var(--primary-bg-color);
